Alignment fixes on calendar and resources

--- a/dev/styles/styles.css
+++ b/dev/styles/styles.css
@@ -462,10 +462,6 @@ summary {
   background-color: #85A3C1;
 }
 
-@media(max-width: 400px) {
-
-}
-
 /* Meet The Team styling*/
 
 .team-grid {
